--- a/src/WpfEditor/Controls/Scene/Scene.xaml
+++ b/src/WpfEditor/Controls/Scene/Scene.xaml
@@ -19,10 +19,8 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:WpfEditor.Controls.Scene"
-             xmlns:view="clr-namespace:WpfEditor.View"
              xmlns:graphx="http://schemas.panthernet.ru/graphx/"
-             mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             mc:Ignorable="d">
     <Grid>
         <Border BorderThickness="1"  Margin="2">
             <graphx:ZoomControl x:Name="zoomControl" AllowDrop="True">
