--- a/src/WpfEditor/View/MainWindow.xaml
+++ b/src/WpfEditor/View/MainWindow.xaml
@@ -27,6 +27,7 @@
     xmlns:modelSelector="clr-namespace:WpfEditor.Controls.ModelSelector"
     xmlns:scene="clr-namespace:WpfEditor.Controls.Scene"
     xmlns:modelExplorer="clr-namespace:WpfEditor.Controls.ModelExplorer"
+    xmlns:propertyEditor="clr-namespace:WpfEditor.Controls.PropertyEditor"
     Title="REAL.NET"
     mc:Ignorable="d"
     d:DataContext="{view:MainWindow}">
@@ -62,7 +63,7 @@
             </ToolBar>
 
             <!-- Area -->
-            <scene:Scene x:Name="scene"  Grid.Row="1"/>
+            <scene:Scene x:Name="scene" Grid.Row="1"/>
 
             <!-- GridSplitter for console -->
             <GridSplitter Grid.Row ="2" HorizontalAlignment="Stretch" VerticalAlignment="Center" Height="5"/>
@@ -82,7 +83,6 @@
                     <RowDefinition Height="0"/>
                     <RowDefinition Height="Auto" MinHeight="70"/>
                     <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto" MinHeight="50"/>
                     <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
@@ -90,19 +90,11 @@
                 <palette:Palette x:Name="palette" Grid.Row="1"/>
 
                 <modelExplorer:ModelExplorer x:Name="modelExplorer" Grid.Row="2"/>
-
-                <Label x:Name="selectedEntityLabel" Grid.Row="3" Content="Selected entity:" HorizontalAlignment="Stretch" />
-
-                <DataGrid x:Name="attributesView" Grid.Row="4" ItemsSource="{Binding Attributes}" AutoGenerateColumns="False">
-                    <DataGrid.Columns>
-                        <DataGridTextColumn Header="Name" IsReadOnly="True" Binding="{Binding Name}"/>
-                        <DataGridTextColumn Header="Type" IsReadOnly="True" Binding="{Binding Type}"/>
-                        <DataGridTextColumn Header="Value" IsReadOnly="False" Binding="{Binding Value}"/>
-                    </DataGrid.Columns>
-                </DataGrid>
+                
+                <propertyEditor:PropertyEditor x:Name="propertyEditor" Grid.Row="3"/>
 
                 <Button 
-                    Grid.Row="5"
+                    Grid.Row="4"
                     Content="Constraints"
                     HorizontalAlignment="Stretch"
                     VerticalAlignment="Stretch"
