--- a/src/WpfEditor/Controls/ModelSelector/ModelSelector.xaml
+++ b/src/WpfEditor/Controls/ModelSelector/ModelSelector.xaml
@@ -13,22 +13,15 @@
 * See the License for the specific language governing permissions and
 * limitations under the License. -->
 
-<UserControl x:Class="WpfEditor.Controls.Console.AppConsole"
+<UserControl x:Class="WpfEditor.Controls.ModelSelector.ModelSelector"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:WpfEditor.Controls.Console"
+             xmlns:local="clr-namespace:WpfEditor.Controls.ModelSelector"
              mc:Ignorable="d" 
-             d:DataContext="{local:AppConsoleViewModel}">
+             d:DataContext="{local:ModelSelector}">
     <Grid>
-        <TabControl TabStripPlacement="Bottom">
-            <TabItem Header="Messages">
-                <ListBox ItemsSource="{Binding Messages}"/>
-            </TabItem>
-            <TabItem Header="Errors">
-                <ListBox ItemsSource="{Binding Errors}"/>
-            </TabItem>
-        </TabControl>
+        <ComboBox x:Name="modelsComboBox" ItemsSource="{Binding ModelNames}"/>
     </Grid>
 </UserControl>
