--- a/src/WpfEditor/Controls/Scene/Scene.xaml
+++ b/src/WpfEditor/Controls/Scene/Scene.xaml
@@ -13,22 +13,21 @@
 * See the License for the specific language governing permissions and
 * limitations under the License. -->
 
-<UserControl x:Class="WpfEditor.Controls.Console.AppConsole"
+<UserControl x:Class="WpfEditor.Controls.Scene.Scene"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:WpfEditor.Controls.Console"
+             xmlns:local="clr-namespace:WpfEditor.Controls.Scene"
+             xmlns:view="clr-namespace:WpfEditor.View"
+             xmlns:graphx="http://schemas.panthernet.ru/graphx/"
              mc:Ignorable="d" 
-             d:DataContext="{local:AppConsoleViewModel}">
+             d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-        <TabControl TabStripPlacement="Bottom">
-            <TabItem Header="Messages">
-                <ListBox ItemsSource="{Binding Messages}"/>
-            </TabItem>
-            <TabItem Header="Errors">
-                <ListBox ItemsSource="{Binding Errors}"/>
-            </TabItem>
-        </TabControl>
+        <Border BorderThickness="1"  Margin="2">
+            <graphx:ZoomControl x:Name="zoomControl" AllowDrop="True">
+                <local:GraphArea AllowDrop="True" x:Name="scene" />
+            </graphx:ZoomControl>
+        </Border>
     </Grid>
 </UserControl>
