--- a/src/AirSim/View/MainWindow.xaml
+++ b/src/AirSim/View/MainWindow.xaml
@@ -14,7 +14,7 @@
 * limitations under the License. -->
 
 <Window 
-    x:Class="WpfEditor.View.MainWindow" 
+    x:Class="AirSim.View.MainWindow" 
     x:ClassModifier="internal"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -83,6 +83,8 @@
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto" MinHeight="50"/>
                     <RowDefinition Height="25"/>
+                    <RowDefinition Height="25"/>
+                    <RowDefinition Height="25"/>
                 </Grid.RowDefinitions>
 
                 <palette:Palette x:Name="palette" Grid.Row="1"/>
@@ -105,6 +107,18 @@
                     HorizontalAlignment="Stretch"
                     VerticalAlignment="Bottom"
                     Click="ConstraintsButtonClick" Height="26"/>
+                <Button x:Name="executeButton" 
+                    Grid.Row="6"
+                    Content="Execute"
+                    HorizontalAlignment="Stretch"
+                    VerticalAlignment="Bottom"
+                    Click="ExecuteButtonClick" Height="26"/>
+                <Button x:Name="stopButton" 
+                    Grid.Row="7"
+                    Content="Stop"
+                    HorizontalAlignment="Stretch"
+                    VerticalAlignment="Bottom"
+                    Click="StopButtonClick" Height="26" IsEnabled="False"/>
             </Grid>
 
         </DockPanel>
