--- a/src/WpfControlsLib/Controls/Toolbar/ToolbarView.xaml
+++ b/src/WpfControlsLib/Controls/Toolbar/ToolbarView.xaml
@@ -37,7 +37,7 @@
             <ToolBar x:Name="PicToolbar" Band="1" ItemsSource="{Binding ButtonsToShow}">
                 <ToolBar.ItemTemplate>
                     <DataTemplate>
-                        <Button ToolTip="{Binding Description}" Command="{Binding Command}" Content="{Binding Image}"/>
+                        <Button ToolTip="{Binding Description}" Command="{Binding WrappedCommand}" Content="{Binding Image}"/>
                     </DataTemplate>
                 </ToolBar.ItemTemplate>
             </ToolBar>
