--- a/src/WpfControlsLib/Controls/Toolbar/ToolbarView.xaml
+++ b/src/WpfControlsLib/Controls/Toolbar/ToolbarView.xaml
@@ -37,7 +37,7 @@
             <ToolBar x:Name="PicToolbar" Band="1" ItemsSource="{Binding ButtonsToShow}">
                 <ToolBar.ItemTemplate>
                     <DataTemplate>
-                        <Button Width="16" Height="16" ToolTip="{Binding Description}" Command="{Binding WrappedCommand}">
+                        <Button Width="16" Height="16" Margin="3" ToolTip="{Binding Description}" Command="{Binding WrappedCommand}">
                             <Button.Background>
                                 <ImageBrush ImageSource="{Binding Image}"/>
                             </Button.Background>
